force-app/main/default/objects/TREX1__Journal_Entry__c/fields/Deferred_Balance_as_of_FY23_End__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Balance_as_of_FY23_End__c</fullName>
    <label>Deferred Balance as of FY23 End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>