force-app/main/default/objects/TREX1__Journal_Entry__c/fields/TREX1__Debit__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Debit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The debit amount for this entry.</description>
    <inlineHelpText>The debit amount for this entry.</inlineHelpText>
    <label>Debit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>