force-app/main/default/objects/TREX1__Journal_Entry__c/fields/TREX1__Effective_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Effective_Date_Time__c</fullName>
    <label>Effective Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>