force-app/main/default/objects/TREX1__Journal_Entry__c/fields/TREX1__GL_Code__c.field-meta.xml
<CustomField>
    <fullName>TREX1__GL_Code__c</fullName>
    <description>The GL code this journal entry posts to.</description>
    <externalId>true</externalId>
    <inlineHelpText>The GL code this journal entry posts to.</inlineHelpText>
    <label>GL Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>