force-app/main/default/objects/TREX1__Journal_Entry__c/fields/TREX1__Net_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Net_Credit_Amount__c</fullName>
    <description>Returns the net amount of Credits - Debits into a single field for reporting on net credit amounts.</description>
    <formula>TREX1__Credit__c - TREX1__Debit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the net amount of Credits - Debits into a single field for reporting on net credit amounts.</inlineHelpText>
    <label>Net Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>