force-app/main/default/objects/TREX1__Journal_Entry__c/fields/TREX1__Transaction__c.field-meta.xml
<CustomField>
    <fullName>TREX1__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The transaction this journal entry is related to.</description>
    <inlineHelpText>The transaction this journal entry is related to.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>TREX1__Transaction__c</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>